[package]
name = "b2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
hyper = { version = "0.14", features = ["client", "http1", "http2", "runtime", "stream"] }
hyper-tls = "0.5"
headers = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bytes = "1"
base64 = "0.13.0"
# sha-1 = "0.9.6"
futures = "0.3.15"
urlencoding = "2.0.0"
serde_urlencoded = "0.7.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full", "parking_lot"] }